# agda2train

./: .ghci  .gitignore  LICENSE  Makefile  README.md  agda2train.cabal  github.sh  shell.nix
.github/workflows/: ci.yml
data/: agda-large-scope.txt  db.json  defsToSkip.txt  expected_response.txt  query.json
data/sexp-backend/: foo.agda  foo.agda-sexp
infer-test/: All.agda  Simple.agda  SimpleEnum.agda  SimpleEnumLib.agda  SimpleLib.agda
scripts/: github.sh  publish.sh
src/: AgdaInternals.hs  DB.hs  InternalToJSON.hs  JSON.hs  Main.hs  Options.hs  Output.hs  ToTrain.hs
test/: Abel.agda  All.agda  Cubical.agda  DecStrictPartialOrder.agda  Eq.agda  Eq2.agda  EqReasoning.agda  EqReasoning0.agda  First.agda  FunNary.agda  FunNary2.agda  ImportStdlib.agda  Importee.agda  Importee2.agda  Importer.agda  IsTotalPreorder.agda  Makefile  MkSetoid.agda  OnlyProofs.agda  OpenModule.agda  ReasoningSetoid.agda  Reduction.agda  StdIO.agda  TotalPreorder.agda  With.agda  WithOld.agda  WithPass.agda  agda2train-test.agda-lib
test/Test/: Clauses.agda  ContextIntro.agda  ContextShadowing.agda  CubicalCompatible.agda  DependencyLevels.agda  Fields.agda  Issue13.agda  Lambda.agda  NominalTyping.agda  OverloadedConstructors.agda  ParametrisedDatatypes.agda  ParametrisedRecords.agda  PatternSynonyms.agda  PiVsFun.agda  Primitives.agda  PrivateDefinitions.agda  PrivateModuleCopies.agda  Product.agda  PropEq.agda  Renamings.agda  Sum.agda  TransitiveDependencies.agda  UnsolvedMetas.agda  Where.agda  With.agda
test/golden/: Test.Clauses.json  Test.ContextShadowing.json  Test.CubicalCompatible.json  Test.DependencyLevels.json  Test.Fields.json  Test.Issue13.json  Test.Lambda.json  Test.NominalTyping.json  Test.OverloadedConstructors.json  Test.ParametrisedDatatypes.json  Test.ParametrisedRecords.json  Test.PatternSynonyms.json  Test.PiVsFun.json  Test.Primitives.json  Test.PrivateDefinitions.json  Test.PrivateModuleCopies.json  Test.Product.json  Test.PropEq.json  Test.Renamings.json  Test.Sum.json  Test.TransitiveDependencies.json  Test.UnsolvedMetas.json  Test.Where.json  Test.With.json
