cabal-version:      2.4
name:               agda2train
version:            0.1.0.0
synopsis:           Agda backend to generate training data for machine learning.
description:        -

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Orestis Melkonian
maintainer:         melkon.or@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:

executable agda2train
    main-is:             Main.hs
    other-modules:       ToTrain
    build-depends:       base
                       , Agda
                       , pretty
                       , containers
    hs-source-dirs:      src
    default-language:    Haskell2010
    default-extensions:  LambdaCase
                       , NamedFieldPuns
                       , OverloadedStrings
                       , RecordWildCards
