cabal-version:      2.4
name:               agda2train
version:            0.1.0.0
synopsis:           Agda backend to generate training data for machine learning.
description:        -

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Orestis Melkonian
maintainer:         melkon.or@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: data/defsToSkip.txt

executable agda2train
    main-is:             Main.hs
    other-modules:       ToTrain, Output, AgdaInternals
    build-depends:       base >=4.12.0.0 && <4.20
                       , Agda >=2.6.3 && <2.6.4
                       , pretty >=1.1.3.3 && <1.2
                       , containers >=0.5.11.0 && <0.8
                       , unordered-containers >=0.2.9.0 && <0.3
                       , aeson >=2.0 && <2.3
                       , aeson-pretty == 0.8.10
                       , bytestring >=0.10.8.1 && <0.13
                       , mtl >=2.2.1 && <2.4
                       , directory >=1.2.6.2 && <1.4
                       , filepath >=1.4.1.0 && <1.5
                       , deepseq >=1.4.2.0 && <1.6
                       , async >=2.2 && <2.3
                       , file-embed == 0.0.15.0
    hs-source-dirs:      src
    default-language:    Haskell2010
    default-extensions:  LambdaCase
                       , NamedFieldPuns
                       , OverloadedStrings
                       , RecordWildCards
                       , TupleSections
                       , DeriveGeneric
                       , DeriveAnyClass
                       , DeriveFunctor
                       , DeriveFoldable
                       , DeriveTraversable
                       , DerivingVia
                       , StandaloneDeriving
                       , PatternSynonyms
                       , TypeFamilies
                       , TypeOperators
                       , FunctionalDependencies
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
